--- a/ShwetaResume.html
+++ b/ShwetaResume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>How to create the Resume Template Design Using HTML and CSS</title>
+	<title>Shweta's Resume</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<script src="https://kit.fontawesome.com/3ef3559250.js" crossorigin="anonymous"></script>
     <style>
