--- a/ShwetaResume.html
+++ b/ShwetaResume.html
@@ -32,7 +32,7 @@ body {
 }
 
 h2 {
-  font-family: "Calligraffitti", cursive;
+  font-family: "Cooper", cursive;
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 20px;
@@ -122,7 +122,7 @@ h2 {
 }
 
 .resume_right .r_namerole p {
-  font-family: "Calligraffitti", cursive;
+  font-family: "Cooper", cursive;
   font-size: 60px;
   line-height: 80px;
   text-align: center;
