--- a/ShwetaResume.html
+++ b/ShwetaResume.html
@@ -4,6 +4,8 @@
 	<title>Shweta's Resume</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<script src="https://kit.fontawesome.com/3ef3559250.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-Hnn9vVjziHI9fV7zIofWuoTd2lKgPfSmS70M3Jsd5IJqBW9GVvzR8DTYOXXChWh+eMDEBXxT7fIyMlm42Hh9Lg==" crossorigin="anonymous" />
+
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Calligraffitti&family=Open+Sans:wght@400;700&display=swap");
 
@@ -189,7 +191,7 @@ h2 {
 	    <div class="r_left_sub">
 	      <div class="r_aboutme">
 	        <h2>About me</h2>
-	        <p>A Skilled and Motivated Web Developer in Asp.Net, MVC, and SQL Server.Wrking with Fast-Paced Environment 
+	        <p>A Skilled and Motivated Web Developer in Asp.Net, MVC, and SQL Server.Working with Fast-Paced Environment 
                 to produce high quality Web Applications and Websites for Client list. Have strong self motivation and ability to thrive under pressure while working remotely </p>
 	      </div>
 	      <div class="r_skills">
